hphp/test/slow/vec/bad-init1.php.expectf
Fatal error: A closing square bracket (']') is expected here. in %s/test/slow/vec/bad-init1.php on line 5